--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat:wght@500;700&family=Overpass:wght@400;700&family=Poppins:wght@400;500;600&family=Rubik:wght@400;500;700&display=swap');
+
 *{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Rubik';
 }
 
 .main-section{
@@ -25,11 +28,23 @@
   /* border-top: 1px solid gray; */
   background-color: white;
   margin: 40px 0px;
+  border-radius: 4px;
 }
 
 .profile-image{
   width: 35px;
   height: 35px;
+}
+
+.profile-image-2 {
+  width: 25px;
+  height: 25px;
+  margin-right: 8px;
+}
+
+.username{
+  font-size: small;
+  font-weight: 500;
 }
 
 .input-box-comment{
@@ -48,4 +63,22 @@
   border: none;
   color: white;
   background-color: hsl(238, 40%, 52%);
+}
+
+.comment-info{
+  margin-top: 40px;
+  width: 35vw;
+  height: 15vh;
+  padding: 16px;
+  background-color: white;
+  border-radius: 4px;
+}
+
+.comment-info-top{
+  display: flex;
+  justify-content: space-between;
+}
+
+.comment-info-top-left{
+  display: flex;
 }
