--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,52 @@
 ::-webkit-scrollbar {
   width: 0;
 }
+
+.main-section{
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  position: relative;
+}
+
+.input-section{
+  height: 20vh;
+  width: 500px;
+  /* background-color: aqua; */
+  position: absolute;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  padding: 20px;
+  border-top: 1px solid gray;
+}
+
+textarea{
+  width: 300px;
+  height: 70px;
+  border: ipx solid hsl(223, 19%, 93%);
+  border-radius: 8px;
+  outline: none;
+  margin-right: 12px;
+  padding: 8px;
+}
+
+.send-button{
+  width: 80px;
+  height: 34px;
+  border-radius: 8px;
+  border: none;
+  cursor: pointer;
+  color: white;
+  background-color: hsl(238, 40%, 52%);
+}
+
+.profile-image{
+  width: 30px;
+  height: 30px;
+}
+
